GNOME Bugzilla – Bug 739277
GstGLFilter propose allocation pass uninitialized size to gst_query_add_allocation_pool
Last modified: 2014-10-28 07:06:30 UTC
version I tested is 19f86b7 construct pipeline as videotestsrc ! glfilterblur name=filter1 ! glfilterblur name=filter2 ! glimagesink gst_gl_filter_propose_allocation of filter2 takes branch as following: 860: (pool != NULL) false 886: (pool == NULL && need_pool) true 898: (decide_pool && GST_IS_GL_BUFFER_POOL (decide_pool) && gst_caps_is_equal_fixed (decide_caps, caps)) true this block assign decide_pool to pool 917: if (pool) true gst_query_add_allocation_pool(query,pool,size,1,0) ---> size is not initialized here
Thanks! commit 28105a6e7da632dc03d2fe2d100d85a6f166ae9b Author: Matthew Waters <matthew@centricular.com> Date: Tue Oct 28 18:01:27 2014 +1100 glfilter: avoid uninitialized variable size when chaining multiple glfilters https://bugzilla.gnome.org/show_bug.cgi?id=739277 and 1.4 5181967da9de271f7144e35114a6b013ae228818