glfilter: avoid uninitialized variable size when chaining multiple glfilters

https://bugzilla.gnome.org/show_bug.cgi?id=739277